@@ -1,7 +1,7 @@
 # -*- tcl -*- Tests for "base32"
 # This testsuite is in the public domain.
 #__________________________________________
-# RCS: @(#) $Id: base32.test,v 1.2 2006/10/09 21:41:39 andreas_kupries Exp $
+# RCS: @(#) $Id: base32.test,v 1.3 2006/10/13 05:39:49 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -16,50 +16,25 @@ support {
     useLocal     base32core.tcl base32::core
 }
 testing {
+    useTcllibC
     useLocalKeep base32.tcl     base32
+    TestAccelInit               base32
+}
+
+set tests [localPath base32.testsuite]
+
+# -------------------------------------------------------------------------
+
+# The global variable 'impl' is part of the public API the testsuite
+# (in base32.testsuite) does expect from the environment.
+
+TestAccelDo base32 impl {
+    source $tests
 }
 
 # -------------------------------------------------------------------------
 
-base32::SwitchTo {}
-foreach e [base32::KnownImplementations] {
-    if {[::base32::LoadAccelerator $e]} {
-        switch -exact -- $e {
-            critcl {puts "> tcllibc based"}
-            tcl    {puts "> pure Tcl"}
-        }
-    }
-}
-
-# -------------------------------------------------------------------------
-
-set usec  0
-set tests [file join [file dirname [info script]] base32.testsuite]
-
-catch {memory validate on}
-
-foreach impl [base32::Implementations] {
-    base32::SwitchTo $impl
-
-    # The global variable 'impl' is part of the public
-    # API the testsuite (in base32.testsuite) can expect
-    # from the environment.
-
-    set usec [time {source $tests} 1]
-
-    #puts "$impl:\t$usec"
-}
-
-catch {memory validate off}
-
-unset usec
 unset tests
-
-# Reset system to fully inactive state.
-
-base32::SwitchTo {}
-
-# -------------------------------------------------------------------------
-
+TestAccelExit base32
 testsuiteCleanup
 return
